@@ -4,6 +4,7 @@ Version 4.2.1.4 'Monza':
 	- TCP/TLS tests extended.
 	- relay RTCP sockets ports allocation fixed.
 	- list of libraries cleaned.
+	- TCP bufferevent concurrency fixed.
 
 10/05/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.2.1.2 'Monza':
